# orqestly

./: APPROVAL_GATE_MATRIX.md  ARCHITECTURE.md  CAPACITY_PLAN_PHASE1.md  CI_CD_PIPELINE_SPEC.md  CI_CD_RELEASE_CONTRACT.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  DATABASE_SCHEMA_DDL.md  DEPLOYMENT_BASELINE.md  DOC_GOVERNANCE_SLA.md  ERROR_CLASSIFICATION.md  EVIDENCE_RETENTION_POLICY.md  FAILOVER_AND_HA_SPECIFICATION.md  FEATURE_COMPARISON.md  JIRA_FIELD_MAPPING.md  MARKET_GAP.md  METRICS_COLLECTION_SPEC.md  MILESTONE2_REFERENCE_RUN.md  MILESTONE3_GOVERNANCE_TEST_PACK.md  OBSERVABILITY_DASHBOARD_SPEC.md  OPERATIONS_RUNBOOK.md  PHASE1_EXECUTION_PLAN.md  PHASE1_ROLLOUT_CHECKLIST.md  POSITIONING.md  README.md  RUNBOOK_CHECKLISTS.md  SECURITY.md  SECURITY_OPERATIONS_BASELINE.md  SIGNOFF_TEMPLATE.md  SKILL_DEVELOPMENT_GUIDE.md  SLO_AND_ALERTING.md  STATUS_TRANSITION_TABLE.md  STRATEGY.md  SUCCESS_METRICS.md  SYSTEM_REQUIREMENTS.md  TEAM_OWNERSHIP_RACI.md  TECHNICAL_SPECIFICATION.md  TECH_STACK_FREEZE.md  VISION.md  docker-compose.yaml  (+1 more)
