[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orqestly"
version = "0.1.0"
description = "AI-orchestrated software validation platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "playwright>=1.45,<2.0",
  "httpx>=0.27,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.1,<4.0",
  "jira>=3.8,<4.0",
  "python-json-logger>=2.0,<3.0",
  "opentelemetry-api>=1.25,<2.0",
  "opentelemetry-sdk>=1.25,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
  "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "black>=24.4,<25.0",
  "pre-commit>=3.7,<4.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
